--- a/src/services/email/templates/account-holder-confirmation.mjml
+++ b/src/services/email/templates/account-holder-confirmation.mjml
@@ -69,23 +69,23 @@
           <strong>Submitted:</strong> {{submittedDateTime}}
         </mj-text>
 
-        <mj-text font-weight="bold" font-size="16px" padding-bottom="15px">
+        <mj-text font-weight="bold" font-size="16px" padding-bottom="4px">
           NEXT STEPS:
         </mj-text>
 
-        <mj-text padding-bottom="5px">
+        <mj-text padding-bottom="2px">
           An authorization request has been sent to:
         </mj-text>
 
-        <mj-text padding-bottom="5px" line-height="1.4">
+        <mj-text padding-bottom="2px" line-height="1.4">
           Dr. {{directorName}}
         </mj-text>
 
-        <mj-text padding-bottom="25px" line-height="1.4">
+        <mj-text padding-bottom="12px" line-height="1.4">
           {{directorEmail}}
         </mj-text>
 
-        <mj-text padding-bottom="25px">
+        <mj-text padding-bottom="6px">
           Once your Medical Director completes their authorization, your
           application will be submitted to Pace Pharmacy for review.
         </mj-text>
@@ -95,7 +95,7 @@
           needed: <strong>{{application}}</strong>
         </mj-text>
 
-        <mj-text font-weight="bold" font-size="16px" padding-bottom="15px">
+        <mj-text font-weight="bold" font-size="16px" padding-bottom="8px">
           WHAT HAPPENS NEXT:
         </mj-text>
 
@@ -127,11 +127,11 @@
           >.
         </mj-text>
 
-        <mj-text font-weight="600" padding-bottom="10px">
+        <mj-text font-weight="600" padding-bottom="2px">
           Need assistance? Contact us:
         </mj-text>
 
-        <mj-text padding-bottom="5px" line-height="1.6">
+        <mj-text padding-bottom="0px" line-height="0">
           <strong>Downtown:</strong> 416-515-7223 |
           <a
             href="mailto:info@pacepharmacy.com"
@@ -149,8 +149,7 @@
           >
         </mj-text>
 
-        <mj-text padding-bottom="5px"> Best regards, </mj-text>
-
+        <mj-text padding-bottom="0px" line-height="0"> Best regards, </mj-text>
         <mj-text padding-bottom="12px" font-weight="600">
           Pace Pharmacy Team
         </mj-text>
