--- a/src/services/email/templates/account-holder-confirmation.mjml
+++ b/src/services/email/templates/account-holder-confirmation.mjml
@@ -78,7 +78,7 @@
         </mj-text>
 
         <mj-text padding-bottom="2px" line-height="1.4">
-          Dr. {{directorName}}
+          {{directorName}}
         </mj-text>
 
         <mj-text padding-bottom="12px" line-height="1.4">
@@ -132,15 +132,6 @@
         </mj-text>
 
         <mj-text padding-bottom="0px" line-height="0">
-          <strong>Downtown:</strong> 416-515-7223 |
-          <a
-            href="mailto:info@pacepharmacy.com"
-            style="color: #333333; text-decoration: underline"
-            >info@pacepharmacy.com</a
-          >
-        </mj-text>
-
-        <mj-text padding-bottom="12px" line-height="1.6">
           <strong>Leaside:</strong> 416-423-6223 |
           <a
             href="mailto:rx@pacepharmacy.com"
@@ -149,7 +140,16 @@
           >
         </mj-text>
 
-        <mj-text padding-bottom="0px" line-height="0"> Best regards, </mj-text>
+        <mj-text padding-bottom="12px" line-height="1.6">
+          <strong>Downtown:</strong> 416-515-7223 |
+          <a
+            href="mailto:info@pacepharmacy.com"
+            style="color: #333333; text-decoration: underline"
+            >info@pacepharmacy.com</a
+          >
+        </mj-text>
+
+        <mj-text padding-bottom="0px" line-height="0"> Sincerely, </mj-text>
         <mj-text padding-bottom="12px" font-weight="600">
           Pace Pharmacy Team
         </mj-text>
